Turns out a bug in Runtime.exec() was breaking on Linux. Small quirk in Java broke ffprobe output by sending it to stderr (known issue), now using ProcessBuilder hoping that works